# cgnsToFromFoam

./: .gitignore  Allwmake
applications/utilities/mesh/conversion/cgnsToFoam/: CGNSBoundaryConditions.C  ConnectivityMapper.H
applications/utilities/mesh/conversion/cgnsToFoam/Make/: options
applications/utilities/postProcessing/dataConversion/foamToCGNS/Make/: options
src/: install.sh  meson.build  meson_options.txt
src/cgns/: meson.build
src/cgns/hdf5/: meson.build
src/libcgnsoo_3.0/: meson.build
src/subprojects/: cgns.wrap  hdf5.wrap
src/subprojects/cgns/: cgnstypes.h.in  meson.build
src/subprojects/cgns/hdf5/: meson.build
src/subprojects/packagefiles/cgns/: meson.build
src/subprojects/packagefiles/hdf5/: meson.build
